# SugaSyEVD

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cusolverSy2tr_benchmark.cu  env.sh  test.slurm
.ipynb_checkpoints/: CMakeCache-checkpoint.txt
api/: BC_backTransV8_10.cu  computerQFromWY.cu  computerWYFromSlide.cu  gen6DistributeMatrix.cu  panelQR.cu  zy_zy_sy2sb.cu
api/TCblas/: tc_ozimmu_syr2k.cu  tc_syr2k.cu
api/TCblas/util/: mat_size.cu
api/inc/: BC_backTrans.h  PanelQR.h  TallShinnyQR.h  computerQFromWY.h  computerWYFromSlide.h  gen6DistributeMatrix.h  mat_size.h  tc_ozimmu_syr2k.h  tc_syr2k.h  tensorBLAS.h  zy_zy_sy2sb.h
inc/: cusolver_util.h  myBase.h
src/: CMakeLists.txt
src/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
src/EVD/: CMakeLists.txt  my_EVD_useLAPACKE_CompQ.cu
src/EVD/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
test/: a.out  gdb_test.cu  my_EVD_useLAPACKE_CompQ_testSuga_CG.cu
util/inc/: bugle_chasingV10-bak.h  bugle_chasingV10.h  bugle_chasingV10_test_Suga_CG.h  checkMetric.h  fileOpTool.h  kernelOther.h  kernelQR.h
util/kernelOther/: kernelOther.cu
util/tool/: checkMetric.cu  fileOpTool.cu
